# Faust

./: .gitignore  README.md  jokelist.py  main.py  prayer.py  pyproject.toml  server.py  textblocks.py
