[tool.poetry]
name = "repl_python3_SquireBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
pygame = "^2.1.0"
wolframalpha = "^5.0.0"
youtube_dl = "^2021.6.6"
praw = "^7.5.0"
google = "^3.0.0"
selenium = "^4.1.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
